# fastapi-template-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  README.md  pre-commit.sh  pyproject.toml
{{cookiecutter.project_slug}}/app/: config.py  conftest.py  main.py  prospector.yaml  settings.toml
{{cookiecutter.project_slug}}/app/ext/: base.py  database.py
{{cookiecutter.project_slug}}/app/migrations/: env.py
{{cookiecutter.project_slug}}/app/migrations/versions/: 6535654405d4_add_{{cookiecutter.model_slug_snakecase|replace('_', '')}}_table.py  cff876cf7d40_add_mixins.py
{{cookiecutter.project_slug}}/app/{{cookiecutter.app_slug_snakecase}}/: __init__.py  settings.local.toml
{{cookiecutter.project_slug}}/app/{{cookiecutter.app_slug_snakecase}}/api/: endpoints.py
{{cookiecutter.project_slug}}/app/{{cookiecutter.app_slug_snakecase}}/dao/: __init__.py  base.py  dao_{{cookiecutter.app_slug_snakecase}}.py
{{cookiecutter.project_slug}}/app/{{cookiecutter.app_slug_snakecase}}/models/: audit_mixins.py  models_{{cookiecutter.app_slug_snakecase}}.py
{{cookiecutter.project_slug}}/app/{{cookiecutter.app_slug_snakecase}}/schemas/: schemas_{{cookiecutter.app_slug_snakecase}}.py
{{cookiecutter.project_slug}}/app/{{cookiecutter.app_slug_snakecase}}/services/: services_{{cookiecutter.app_slug_snakecase}}.py
{{cookiecutter.project_slug}}/app/{{cookiecutter.app_slug_snakecase}}/tests/: test_{{cookiecutter.app_slug_snakecase}}_endpoints.py  test_{{cookiecutter.app_slug_snakecase}}_services.py
{{cookiecutter.project_slug}}/app/{{cookiecutter.app_slug}}/tests/: test_{{cookiecutter.app_slug|replace('-', '_')}}_endpoints.py  test_{{cookiecutter.app_slug}}_endpoints.py
