[tool.poetry]
name = "partyou-microservice-{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["Admin <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "*"}
fastapi = "^0.*"
passlib = {extras = ["bcrypt"], version = "^1.*"}
pyjwt = "^1.7.1"
python-jose = {version = "^3.2.0", extras = ["cryptography"]}
asyncpg = "*"
loguru = "*"
dynaconf = "*"
pydantic = "^1.*"
gunicorn = "^20.*"
psycopg2-binary = "^2.*"
alembic = "^1.*"
sqlalchemy = "^1.*"
gino= "*"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
jedi = "*"
ipdb = "*"
neovim = "*"
prospector = "*"
pydevd_pycharm = "*"
pep8 = "*"
flake8 = "*"
mypy = "*"
isort = "*"
autoflake = "*"
sqlalchemy-stubs = "*"
pytest = "*"
pytest-cov = "*"
pytest-watch = "*"
pytest-sugar = "*"
pytest-mock = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 160

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
