[tool.poetry]
name = "partyou-microservice-auth"
version = "0.1.0"
description = "Partyou Auth Domain"
authors = ["Admin <jonatas@partyou.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "*"}
fastapi = "^0.*"
asyncpg = "*"
loguru = "*"
dynaconf = "*"
pydantic = "^1.*"
gunicorn = "^20.*"
psycopg2-binary = "^2.*"
alembic = "^1.*"
sqlalchemy = "^1.*"
gino= "*"
requests = "^2.25.1"
pep8 = "^1.7.1"

[tool.poetry.dev-dependencies]
jedi = "*"
ipdb = "*"
neovim = "*"
prospector = "*"
pydevd_pycharm = "*"
pep8 = "*"
flake8 = "*"
mypy = "*"
isort = "*"
autoflake = "*"
sqlalchemy-stubs = "*"
pytest = "*"
pytest-cov = "*"
pytest-watch = "*"
pytest-sugar = "*"
pytest-mock = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 160

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
